Implement simple Resister